--- a/images/lxde-desktop/auto/config
+++ b/images/lxde-desktop/auto/config
@@ -15,6 +15,7 @@ case "$(dpkg --print-architecture)" in
 esac
 
 lb config noauto \
+        -a amd64 \
 	--clean \
 	--ignore-system-defaults \
 	--mode debian \
@@ -22,4 +23,13 @@ lb config noauto \
 	--linux-flavours "${_LINUX_FLAVOURS}" \
 	--linux-packages "linux-image linux-headers" \
 	--source "${_SOURCE}" \
+        --archive-areas "main contrib non-free" \
+        --bootappend-live "\
+boot=live \
+config \
+persistence \
+persistence-encryption=luks,none \
+quickreboot \
+username=pcarrier \
+hostname=shoe" \
 "${@}"
